Revision history for Perl module Galileo

0.XXX
    - Simplify home path logic

0.0038 2015-01-25
    - Fixed compatibility with recent Mojolicious
        - Bumped dependency to 5.41

0.0037 2014-10-13
    - Fix installation bug causing installation of version 1 rather than the most current
    - Removed ability to upgrade from unversioned schemas (pre version 0.012)
    - Navigation menu changes are visible immediately upon saving
    - Navigation menu editor displays active items in current menu order

0.036 2014-08-31
    - Fixed setup bug introduced by Mojolicious v5.30 (fix for __DATA__ handle)
    - Remove unused dependency on Term::Prompt

0.035 2014-08-16
    - Added Pagedown Extra (keedi++)

0.034 2014-05-31
    - Improve compatibility with Mojolicious 5.0 (no bump required)
        - Bump Mojolicious::Plugin::Humane to 0.07
    - Fix typo in setup command (crab++)

0.033 2014-05-10
    - Change dump command to accept encoding parameter (keedi++)
    - dump command now emits UTF-8 by default

0.032 2014-04-06
    - Added 'secrets' configuration key
        - Bump required Mojolicious version to 4.63
    - Deprecated 'secret' configuration key

0.031 2013-11-28
    - Fixed a few long-standing bugs (hrupprecht++)

0.030 2013-08-26
    - Removed Galileo::Plugin::FlexMemorize
      in favor of Mojolicious::Plugin::Memorize
    - Move to using some of the new features of Mojolicious 4.0
        - Especially the improve Websocket JSON interaction
        - Bump required Mojolicious version to 4.0

0.029 2013-06-29
    - Fixed page deletion bug introduced in 0.028 (chicoxyzzy++)
    - Fixed model click handler bugs

0.028 2013-05-14
    - Fixed bugs in modals (Fatalnix++)
    - Moved modal template to a plugin
    - Moved memorization helpers to a plugin
    - Improved testing

0.027 2013-04-03
    - Use RFC 6901 compliant JSON pointers in tests
    - Bump Mojolicious to 3.92

0.026 2013-03-15
    - Added File::Next to requires, was causing failing installation
