@@ -37,10 +37,6 @@ This is the directory where L<Galileo> expects additional files. These include t
 
 This is the full path to a configuration file. The default is a file named F<galileo.conf> in the C<GALILEO_HOME> path, however this file need not actually exist, defaults may be used instead. This file need not be written by hand, it may be generated by the C<galileo config> command.
 
-=item C<GALILEO_CONSOLE_LOGGER>
-
-Use L<Mojolicious::Plugin::ConsoleLogger> to get additional state information and logger output sent to the browser console.
-
 =back
 
 =head2 The F<galileo> command line application
