@@ -178,8 +178,9 @@ sub startup {
     return $user->is_admin;
   });
 
-  $app->plugin( 'Memorize' );
-  $app->plugin( 'Galileo::Plugin::Modal' );
+  $app->plugin('Memorize');
+  $app->plugin('Galileo::Plugin::Modal');
+  $app->plugin('Humane', auto => 0);
 
   ## Routing ##
 
@@ -212,9 +213,6 @@ sub startup {
   $if_admin->websocket( '/store/user' )->to('admin#store_user');
   $if_admin->websocket( '/remove/page' )->to('admin#remove_page');
 
-  ## Additional Plugins ##
-  $app->plugin('Humane', auto => 0);
-  $app->plugin('ConsoleLogger') if $ENV{GALILEO_CONSOLE_LOGGER};
 }
 
 1;
@@ -259,10 +257,6 @@ This is the directory where L<Galileo> expects additional files. These include t
 =item C<GALILEO_CONFIG>
 
 This is the full path to a configuration file. The default is a file named F<galileo.conf> in the C<GALILEO_HOME> path, however this file need not actually exist, defaults may be used instead. This file need not be written by hand, it may be generated by the C<galileo config> command.
-
-=item C<GALILEO_CONSOLE_LOGGER>
-
-Use L<Mojolicious::Plugin::ConsoleLogger> to get additional state information and logger output sent to the browser console.
 
 =back
 
